// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots an event deeply 1`] = `
<Event
  event={
    Object {
      "date": "2017-11-11",
      "name": "Milwaukee Code",
    }
  }
>
  <article
    className="event"
  >
    <h1>
      Milwaukee Code
    </h1>
    <Date
      date="2017-11-11"
    >
      <h2
        className="event-date"
      >
        2017-11-11
      </h2>
    </Date>
    <Location />
  </article>
</Event>
`;

exports[`snapshots an event shallowly 1`] = `
<article
  className="event"
>
  <h1>
    Milwaukee Code Camp
  </h1>
  <Date
    date="2017-11-11"
  />
  <Location />
</article>
`;
